--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,16 +26,26 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const adult = people.some(p =>(new Date().getFullYear() - p.year >= 19));
+    
     // Array.prototype.every() // is everyone 19 or older?
-
+    const allAdults = people.every(p =>(new Date().getFullYear() - p.year >= 19));
+    
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const id823423 = comments.find(c => c.id === 823423).text;
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
-    // delete the comment with the ID of 823423
+    const index = comments.findIndex(c => c.id === 823423);
 
+    // delete the comment with the ID of 823423
+    function deleter(){
+      const id = comments.findIndex(c => c.id === 823423);
+      comments.splice(id, 1);
+      return comments;
+    };
   </script>
 </body>
 </html>
