--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,6 +7,56 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
+  const canvas = document.getElementById("draw");
+  const ctx = canvas.getContext("2d");
+
+  canvas.height = window.innerHeight;
+  canvas.width = window.innerWidth;
+
+  ctx.strokeStyle = "#BADA55";
+  ctx.lineJoin = "round";
+  ctx.lineCap = "round";
+  ctx.lineWidth = 50; 
+
+  let isDrawing = false;
+  let lastX = 0;
+  let lastY = 0;
+  let direction = true;
+  let hue = 0;
+
+  function draw(e){
+    if(!isDrawing){
+      return;
+    };
+
+    ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
+    ctx.beginPath();
+    ctx.moveTo(lastX, lastY);
+    ctx.lineTo(e.offsetX, e.offsetY);
+    ctx.stroke();
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+    hue++;
+
+    if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1){
+      direction = !direction;
+    };
+
+    if(direction){
+      ctx.lineWidth++;
+    }else{
+      ctx.lineWidth--;
+    } 
+  };
+
+  canvas.addEventListener("mousedown", (e) => {
+    [lastX, lastY] = [e.offsetX, e.offsetY];
+    isDrawing = true;
+  }); 
+
+  canvas.addEventListener("mousemove", draw)
+  canvas.addEventListener("mouseout", () => isDrawing = false)
+  canvas.addEventListener("mouseup", () => isDrawing = false)
+
 </script>
 
 <style>
@@ -14,6 +64,5 @@
     margin: 0;
   }
 </style>
-
 </body>
 </html>
