--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
-
+  <p onClick="makeGreen()">×BREAK×DOWN×BREAK×BREAK×BREAK×BREAK×</p>
   <script>
-    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'Hugo', age: 8 }];
 
     function makeGreen() {
       const p = document.querySelector('p');
@@ -18,29 +17,53 @@
     }
 
     // Regular
+    console.log('This is a %s comment', `regular`);
 
     // Interpolated
+    console.log('this is an interpolation %s', `${dogs[0].name}`);
 
     // Styled
+    console.log(" I'm not styled %c I am", 'font-size: 50px');
 
     // warning!
+    console.warn("danger danger");
 
     // Error :|
+    console.error("Watch out!");
 
     // Info
+    console.info("Keep learning");
 
     // Testing
-
+    const p = document.querySelector('p');
+    console.assert(p.classList.contains('something'), "You missed it")    
     // clearing
+    // console.clear();
 
     // Viewing DOM Elements
+    console.log(p);
+    console.dir(p);
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`this is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    })
 
     // counting
+    console.count('panchi');
 
     // timing
-
+    console.time('sleep');
+      console.log("start");
+      function show() {
+        console.log("finish");
+        console.timeEnd('sleep');
+      };
+      window.setTimeout(show, 3000);
   </script>
 </body>
 </html>
