--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -50,12 +50,7 @@
       border-left: 1px solid #D1E2FF;
     }
   </style>
-   <!--
-   The following is a common layout you would see in an email client.
 
-   When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
-
-  -->
   <div class="inbox">
     <div class="item">
       <input type="checkbox">
@@ -96,6 +91,27 @@
   </div>
 
 <script>
+const checkboxes = document.querySelectorAll('input[type=checkbox]');
+let lastChecked;
+
+function checker(e){
+  
+  let inBetween = false;
+  if(e.shiftKey && this.checked){
+    checkboxes.forEach(checkbox => {
+      if( checkbox === lastChecked || checkbox === this ){
+        inBetween = !inBetween;
+      }
+      
+      if (inBetween) {
+        checkbox.checked = true;
+      }
+    });
+  }
+  lastChecked = this;
+}
+
+checkboxes.forEach(checkbox => checkbox.addEventListener("click", checker));
 </script>
 </body>
 </html>
