--- a/15 - LocalStorage/index-START.html
+++ b/15 - LocalStorage/index-START.html
@@ -26,13 +26,48 @@
   </div>
 
 <script>
-  const addItems = document.querySelector('.add-items');
+  const addItems = document.querySelector('.add-items'); 
   const itemsList = document.querySelector('.plates');
-  const items = [];
+  const items = JSON.parse(localStorage.getItem("items")) || [];
 
+  
+  function addItem(e){
+    const text = this.querySelector("[name=item]").value
+    e.preventDefault();
+    const item = {
+      text,
+      done: false
+    };
+    items.push(item);
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+
+    this.reset();
+  }
+
+  function populateList(plates = [], platesList){
+    platesList.innerHTML = plates.map((plate, i) => {
+      return `
+        <li>
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? "checked" : ""}/> 
+          <label for="item${i}">${plate.text}</label>
+        </li>
+      `;
+    }).join('');
+  }
+
+  function toggleDone(e){
+    if(!e.target.matches("input")) return;
+    const index = e.target.dataset.index;
+    items[index].done = !items[index].done;
+    localStorage.setItem('items', JSON.stringify(items));
+    populateList(items, itemsList);
+  }
+
+  itemsList.addEventListener('click', toggleDone);
+  addItems.addEventListener('submit', addItem);
+  populateList(items, itemsList);
 </script>
-
 
 </body>
 </html>
-
