--- a/16 - Mouse Move Shadow/index-start.html
+++ b/16 - Mouse Move Shadow/index-start.html
@@ -35,6 +35,28 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero');
+  const text = hero.querySelector('h1');
+  const walk = 200;
+
+  function shadow(e){
+    const { offsetWidth: width, offsetHeight: height } = hero;
+    let {offsetX: x, offsetY: y } = e; 
+
+    if(this !== e.target){
+      x = x + e.target.offsetLeft;
+      y = y + e.target.offsetTop;
+    };
+
+    const Xwalk = Math.round((x / width * walk) - (walk / 2));
+    const Ywalk = Math.round((y / height * walk) - (walk / 2));
+    text.style.textShadow = `
+      ${Xwalk}px ${Ywalk}px 0 red,
+      ${-Xwalk}px ${Ywalk}px 0 green,
+      ${Ywalk}px ${-Xwalk}px 0 yellow,
+      ${-Ywalk}px ${Xwalk}px 0 blue`
+  }  
+  hero.addEventListener("mousemove", shadow);
 </script>
 </body>
 </html>
